--- a/bower.json
+++ b/bower.json
@@ -13,12 +13,13 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.1.3",
-    "angular": "~1.3.14",
-    "angular-ui-router": "~0.2.8"
-    "underscore": "~1.8.2",
-    "bootstrap": "~3.3.2",
-    "components-font-awesome": "~4.3.0"
+    "jquery"                  : "~2.1.3",
+    "angular"                 : "~1.3.14",
+    "angular-ui-router"       : "~0.2.8",
+    "angular-animate"         : "~1.3.15",
+    "underscore"              : "~1.8.2",
+    "bootstrap"               : "~3.3.2",
+    "components-font-awesome" : "~4.3.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.14"
